--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ services:
   database:
     image: 'mariadb:10.6.4'
     environment:
-      MYSQL_ROOT_PASSWORD: password
+      MYSQL_USER: root
+      MYSQL_PASSWORD: password
       MYSQL_DATABASE: main
     ports:
       - '3306'
